# NTypst

./: .gitignore  Directory.Build.Props  NTypst.slnx  README.md  build.sh
.github/workflows/: build.yml
examples/NTypst.Examples/: NTypst.Examples.csproj  Program.cs  main.typ
native/: Cargo.toml  build.rs
native/src/: lib.rs
src/NTypst/: CompilationResult.cs  DiagnosticSeverity.cs  HtmlDocument.cs  NTypst.csproj  PagedDocument.cs  TypstCompilationException.cs  TypstDiagnostic.cs  TypstWorld.cs
src/NTypst.Native/: CompileResultInterop.cs  NTypst.Native.csproj  NTypst.Native.targets  NativeBuffer.cs  NativeCompileResult.cs  NativeHtmlDocumentHandle.cs  NativePagedDocumentHandle.cs  NativeWorldHandle.cs
tests/NTypst.Benchmarks/: Class1.cs
tests/NTypst.Tests/: UnitTest1.cs
