[package]
name = "typst-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.44"
typst = "0.14.2"
typst-html = "0.14.2"
typst-kit = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
typst-svg = "0.14.2"

[build-dependencies]
csbindgen = "1.9.7"
